fix: make it possible to reset the background and selected background color. Matthew Woehlke, please try again with upcoming KDE 3.5.4.

BUG:117479

svn path=/branches/KDE/3.5/kdelibs/; revision=555481